[package]
name = "dtparse"
version = "0.8.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
description = "A dateutil-compatible timestamp parser for Rust"
repository = "https://github.com/bspeice/dtparse.git"
readme = "README.md"
categories = ["date-and-time"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "bspeice/dtparse" }

[lib]
name = "dtparse"

[dependencies]
chrono = "0.4"
lazy_static = "1.0"
num-traits = "0.2"
rust_decimal = "0.8"
